# salesflow-ai

./: .dockerignore  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  EVIDENCE.md  LIMITATIONS.md  README.md  RESEARCH.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
deploy/: DEPLOY.md  apprunner-service.json  cloudrun.service.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/lib/: api.js  audio.js
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Voice.jsx
src/salesflow/: __init__.py  analysis.py  config.py  memory.py  observability.py  personas.py  privacy.py  web.py
src/salesflow/agent/: __init__.py  agent.py  escalation.py  pivot.py  question_selector.py
src/salesflow/domain/: __init__.py  models.py  phases.py
src/salesflow/eval/: __init__.py  ab.py  cli.py  dashboard.py  golden.py  harness.py  judge.py  scorers.py
src/salesflow/eval/goldens/: golden_set.yaml
src/salesflow/knowledge/: __init__.py  kb.py
src/salesflow/knowledge/data/: competitive.md  objections.md  policy.md
src/salesflow/llm/: __init__.py  anthropic_client.py  base.py  mock_client.py  openai_client.py
src/salesflow/voice/: __init__.py  factory.py  interfaces.py  live_cartesia.py  live_cartesia_stt.py  live_deepgram.py  live_faster_whisper_stt.py  live_groq_stt.py  mock.py  pipeline.py
tests/: conftest.py  test_ab.py  test_agent.py  test_eval.py  test_golden_set.py  test_llm_and_kb.py  test_memory.py  test_privacy.py  test_state_machine.py  test_voice.py  test_web.py
